# loxone_hueapi2

./: .gitignore  README.md  build_plugin_zip.sh  index.php  plugin.cfg  postroot.sh  pyproject.toml
config/: config.json
hue_plugin/: __init__.py  cli.py  config.py  event_forwarder.py  hue_client.py  server.py
tests/: test_cli.py  test_config.py  test_event_forwarder.py  test_hue_client.py
webfrontend/html/: .htaccess  index.cgi  index.html  index.php
webfrontend/htmlauth/: index.php
